# finpy

./: .gitignore  README.md  alembic.ini  docker-compose.yml  example.env  main.py  pyproject.toml
app/: main.py  models.py
app/alembic/migrations/: env.py
app/alembic/migrations/versions/: 85826dcb04b5_added_index_to_dato_field.py  c12584dfa291_added_transactions_table.py
app/api/: main.py
app/api/routes/: transactions.py
app/core/: config.py
app/core/db/: database.db  db.py  models.py
db/: db.py  models.py
frontend/: main.py
