[project]
name = "finpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "psycopg[binary]<4.0.0,>=3.1.13",
]
